# openclaw-node-widget-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  PHASE2-SPEC.md  PHASE4-SPEC.md  PHASE5-SPEC.md  README.md  RUST-SPEC.md
.github/workflows/: ci.yml  release.yml
docs/: DISCORD_ANNOUNCEMENT.md
installer/: installer.nsi
macos/: Info.plist
scripts/: bundle-macos.sh
specs/: chat-persistence.md
src/: autostart.rs  chat.rs  chat_ui.html  config.rs  dashboard.rs  error.rs  gateway.rs  history.rs  i18n.rs  install.rs  lib.rs  lock.rs  main.rs  markdown.rs  media.rs  monitor.rs  process.rs  settings.rs  setup.rs  tailscale.rs  tray.rs  uninstall.rs  update.rs  voice.rs  wizard.rs
src/plugin/: mcp.rs  mod.rs  n8n.rs  ollama.rs  openai_compat.rs  openclaw.rs  registry.rs
tests/: chat_webview_test.rs  clipboard_test.rs  commands_test.rs  dashboard_test.rs  export_test.rs  health_check_test.rs  history_test.rs  markdown_test.rs  mcp_plugin_test.rs  n8n_plugin_test.rs  ollama_plugin_test.rs  openai_compat_plugin_test.rs  pin_test.rs  plugin_test.rs  search_test.rs  settings_test.rs  syntax_highlight_test.rs  system_prompt_test.rs  theme_test.rs  token_usage_test.rs  tray_reply_test.rs  tts_test.rs  voice_test.rs  wizard_installer_test.rs
