[package]
name = "openclaw-node-widget-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tray-icon = "0.14"
url = "2"
open = "5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
