[package]
name = "openclaw-node-widget-rs"
version = "0.4.0"
edition = "2021"

[dependencies]
arboard = "3"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
eframe = "0.31"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tray-icon = "0.14"
url = "2"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sys-locale = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
zip = "2"
winapi = { version = "0.3", features = ["winbase"] }
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
winrt-notification = "0.5"
